# TxRiskAgent

./: .env.example  .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  openapi.yaml  pyproject.toml  railway.json
docs/: airdrop-demo-storyline.md  airdrop-security-cases.md  hackathon-submission.md  signshield-hackathon-brief.md  tx-scan-nonstream-all-samples.json  txriskagent-promo.md
dump-tx/: 2026-06-02T09-47-56-133Z-a850707e-9421-4cd9-a5e6-6fa636023746.json  2026-06-02T11-14-54-807Z-20571aef-0d9a-489d-b3e1-3b4aaf982fbd.json  2026-06-03T00-01-00-000Z-erc20-unlimited-approval-phishing.json  2026-06-03T00-02-00-000Z-erc20-large-approval-fake-swap.json  2026-06-03T00-03-00-000Z-eip2612-permit-unlimited-drainer.json  2026-06-03T00-04-00-000Z-nft-setapprovalforall-fake-airdrop.json  2026-06-03T00-05-00-000Z-nft-setapprovalforall-revoke-benign.json  2026-06-03T00-06-00-000Z-token-transfer-to-drainer.json  2026-06-03T00-07-00-000Z-token-transfer-to-dead.json  2026-06-03T00-08-00-000Z-transferfrom-prior-allowance-drain.json  2026-06-03T00-09-00-000Z-multicall-hidden-approval-and-transfer.json  2026-06-03T00-10-00-000Z-multicall-deadline-fake-migration.json  2026-06-03T00-11-00-000Z-universal-router-execute-permit2-style-drain.json  2026-06-03T00-12-00-000Z-unknown-claim-rewards-selector.json  2026-06-03T00-13-00-000Z-flashloan-oracle-attack-helper-unknown.json  2026-06-03T00-14-00-000Z-native-address-poisoning-lookalike.json  2026-06-03T00-15-00-000Z-native-transfer-to-synthetic-drainer.json  2026-06-03T00-16-00-000Z-erc20-hidden-owner-token.json  description.txt  (+7 more)
(+183 files in other folders)
