[project]
name = "tx-risk-agent"
version = "0.1.0"
description = "Reproducible SignShield EVM pre-signature risk analysis prototype."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "openai>=1.0",
    "requests>=2.32",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.uv]
package = false
